[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Cell.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41.8409, 41.954 )

[node name="Cell" type="Area2D" groups=["cells"]]
position = Vector2( 60.1592, 56.476 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -14, -14.43 )
shape = SubResource( 1 )

[node name="Focus" type="Sprite" parent="."]
visible = false

[node name="Sign" type="Sprite" parent="."]
visible = false

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
